# QRcode

./: README.md
Code/: .gitmodules  CMakeLists.txt  README.md  main.cpp
Code/cmake/: FindZxing.cmake
Code/data/: boundary_info.txt  label_image.txt  labled_image.txt
Code/data/connect/CAD/: circle.psd
Code/data/connect/circle/: Unitag_QRCode_1547127926838.psd
Code/data/connect/ready/: circleCAD.psd
Code/include/: AxisDetection.cpp  AxisDetection.h  ConnectSP.cpp  Connection.cpp  Connection.h  MyDetector.cpp  MyDetector.h  MyGridSampler.cpp  MyGridSampler.h  QRImageInfo.cpp  QRImageInfo.h  StabilityDectection.cpp  StabilityDectection.h  example.h  parallel_for.h  pixelVisibility.cpp  pixelVisibility.h
Demo/: readme.txt
